--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^6.23.0",
+    "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
