--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.23.0",
-    "typescript-cookie": "^1.0.6"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
