--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "js-cookie": "^3.0.5",
     "notistack": "^3.0.1",
     "react": "^17.0.0",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
